Some small Translation updates (#31)

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,118 +1,129 @@
 {
-    "ADD":"HINZUFÜGEN",
-    "ALL":"ALLE",
-    "ALL Monsters":"ALLE POKÉMON",
-    "ALL Quests":"ALLE Quests",
-    "ALL Raids/Eggs":"ALLE Raids/Eier",
-    "CANCEL":"ABBRECHEN",
-    "Cleaning Activated":"Bereinigen aktiviert",
-    "Cleaning activated on":"Bereinigen aktiviert bei",
-    "command":"Kommando",
-    "CP":"WP",
-    "DELETE":"LÖSCHEN",
-    "DELETE ALL":"ALLE LÖSCHEN",
-    "DISTANCE":"DISTANZ",
-    "Eggs":"Eier",
-    "Eggs Level":"Eier Level",
-    "Error":"Fehler",
-    "GREAT":"SUPER",
-    "IV":"IV",
-    "LEVEL":"LEVEL",
-    "meters":"Meter",
-    "Please set it in discord using":"Bitte setze es in Discord mit dem entsprechenden",
-    "POKÉMONS":"POKÉMON",
-    "POKÉMONS TRACKED":"POKÉMON TRACKED",
-    "EGGS & RAIDS TRACKED":"EIER & RAIDS TRACKED",
-    "QUESTS TRACKED":"QUESTS TRACKED",
-    "QUESTS":"QUESTS",
-    "RAIDS":"RAIDS",
-    "Raids":"Raids",
-    "Raids Level":"Raid Level",
-    "Settings updated successfully":"Einstellungen erfolgreich aktualisiert",
-    "STATS":"STATS",
-    "Successfully Added Monster Alarm":"POKÉMON Alarm(e) erfolgreich gespeichert",
-    "Successfully Added Quest Alarm(s)":"QUEST Alarm(e) erfolgreich gespeichert",
-    "Successfully Added Raids Alarm(s)":"RAID Alarm(e) erfolgreich gespeichert",
-    "Successfully Deleted Egg Alarm":"Ei Alarm erfolgreich gelöscht",
-    "Successfully Deleted Eggs & Raids Alarm(s)":"Ei & Raid Alarm(e) erfolgreich gelöscht",
-    "Successfully Deleted Monster Alarm(s)":"POKÉMON Alarm erfolgreich gelöscht",
-    "Successfully Deleted Quest Alarm(s)":"QUEST Alarm(e) erfolgreich gelöscht",
-    "Successfully Deleted Raid Alarm(s)":"Raid Alarm(e) erfolgreich gelöscht",
-    "Successfully Updated Egg Alarm":"Ei Alarm erfolgreich aktuallisiert",
-    "Successfully Updated List of Areas":"Gebiete Liste erfolgreich aktuallisiert",
-    "Successfully Updated Monster Alarm":"POKÉMON Alarm erfolgreich aktuallisiert",
-    "Successfully Updated Quest Alarm":"Quest Alarm erfolgreich aktuallisiert",
-    "Successfully Updated Raid Alarm":"Raid Alarm erfolgreich aktuallisiert",
-    "Delete ALL tracked Mons?":"Alle getrackten POKÉMON löschen",
-    "Delete ALL Raid/Eggs?":"Alle Raids/Eier löschen",
-    "Delete ALL Quests?":"Alle Quests löschen",
-    "This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?":"Das wird alle deine Eier und Raid Alarme löschen, bist du dir sicher?",
-    "This will delete all your Pokémon Alarms and cannot be undone, are you sure ?":"Das wird alle deine Pokémon Alarme löschen, bist du dir sicher?",
-    "This will delete all your Quests Alarms and cannot be undone, are you sure ?":"Das wird alle deine Quest Alarme löschen, bist du dir sicher?",
-    "ULTRA":"HYPER",
-    "WEIGHT":"GEWICHT",
-    "Weight":"Gewicht",
-    "MIN STATS":"STATS MINIMUM",
-    "MAX STATS":"STATS MAXIMUM",
-    "PvP Great":"Superliga",
-    "PvP Ultra":"Hyperliga",
-    "MIN Rank":"Ranking Min",
-    "MAX Rank":"Ranking Max",
-    "AREAS":"GEBIETE",
-    "Your alarms are currently disabled !":"Deine Alarme sind aktuell deaktiviert",
-    "You Request couldn't not be handled":"Deine Eingabe konnte nicht verarbeitet werden",
-    "Your location is not set. Distance settings won't be taken into account.":"Dein Standort ist nicht gesetzt.</br> Distanzen werden nicht berücksichtigt.</br>",
-    "Distance":"Distanz",
-    "Form":"Form",
-    "Gender":"Geschlecht",
-    "GENDER":"GESCHLECHT",
-    "All":"Alle",
-    "Male":"Männlich",
-    "Female":"Weiblich",
-    "Clean":"Bereinigen",
-    "Yes":"Ja",
-    "No":"Nein",
-    "Apply to all Pokémons":"Auf alle Pokémon anwenden",
-    "NEW MONSTER ALARM":"NEUER POKÉMON ALARM",
-    "Type":"Tippe",
-    "to display all Pokémons":"um alle Pokémon anzuzeigen",
-    "Search":"Suche",
-    "Cancel":"Abbrechen",
-    "Submit":"Speichern",
-    "NEW RAID ALARM":"NEUER RAID ALARM",
-    "Select Egg Levels you want to add":"Wähle Ei Stufen aus, die du hinzufügen willst",
-    "Select Raid Levels you want to add":"Wähle Raid Stufen aus, die du hinzufügen willst",
-    "Select Pokémon Quests you want to add":"Wähle Quests aus, die du hinzufügen willst",
-    "Select the Raid Bosses you want to add":"Wähle Raid Bosse aus, die du hinzufügen willst",
-    "NEW QUEST ALARM":"NEUER QUEST ALARM",
-    "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Wähle Pokémon-Quests aus, die du hinzufügen willst",
-    "Pokemons Currently available on Map":"Pokémon die aktuell auf der Map verfügbar sind",
-    "Or use search below to add another pokemon":"oder verwende die Suche um ein anderes auszuwählen",
-    "Select Quests Items you want to add":"Wählen ein Quest Item aus, dass du hinzufügen willst.",
-    "Level": "Level",
-    "Update": "Aktuallisieren",
-    "Close":"Schließen",
-    "Other":"Anderes",
-    "Buy or Renew a Subscription": "Abonnement kaufen oder verlängern",
-    "It looks like you do not have a valid subscription to this tool yet":"Du hast anscheinend noch kein gültiges Abonnement für dieses Tool",
-    "It looks like your subscription has expired on":"Dein Abonnement ist anscheinend abgelaufen",
-    "Your subscription is still valid until":"Dein Abonnement ist noch gültig bis",
-    "Back to":"Zurück zu",
-    "Renew":"Erneuern",
-    "Subscription valid until":"Abonnement gültig bis",
-    "Alerts":"Alarme",
-    "ALL Monters Cleaning":"Alle Pokémon bereinigen",
-    "ALL Raid/Egg Cleaning":"Alle Raids / Eier bereinigen",
-    "ALL Quests Cleaning":"Alle Quests bereinigen",
-    "Your Location is not set and cannot be set here!":"Dein Standort ist nicht festgelegt und kann hier nicht festgelegt werden!",
-    "Your Location is set to":"Dein Standort lautet",
-    "You have not set any area yet!": "Du hast noch kein Gebiet gewählt!",
-    "Save changes":"Änderungen speichern",
-    "YOU ARE NOT REGISTERED!":"Du bist nicht registriert!",
-    "Please Register in Discord using":"Bitte registriere dich in Discord mit",
-    "before using this tool":"bevor du dieses Seite nutzen kannst.",
-    "Do you really want to Leave?":"Möchtest du die Seite wirklich verlassen?",
-    "Click 'Logout' below if you are ready to end your current session":"Klicke auf 'Abmelden' um die Session zu beenden",
-    "Logout":"Abmelden",
-    "Settings":"Einstellungen"
+   "ADD":"HINZUFÜGEN",
+   "ALL":"ALLE",
+   "ALL Monsters":"ALLE POKÉMON",
+   "ALL Quests":"ALLE Quests",
+   "ALL Raids/Eggs":"ALLE Raids/Eier",
+   "CANCEL":"ABBRECHEN",
+   "Cleaning Activated":"Bereinigen aktiviert",
+   "Cleaning activated on":"Bereinigen aktiviert bei",
+   "command":"Kommando",
+   "CP":"WP",
+   "DELETE":"LÖSCHEN",
+   "DELETE ALL":"ALLE LÖSCHEN",
+   "DISTANCE":"DISTANZ",
+   "Eggs":"Eier",
+   "Eggs Level":"Eier Level",
+   "Error":"Fehler",
+   "GREAT":"SUPER",
+   "IV":"IV",
+   "LEVEL":"LEVEL",
+   "meters":"Meter",
+   "Please set it in discord using":"Bitte setze es in Discord mit dem entsprechenden",
+   "POKÉMONS":"POKÉMON",
+   "POKÉMONS TRACKED":"POKÉMON TRACKED",
+   "EGGS & RAIDS TRACKED":"EIER & RAIDS TRACKED",
+   "QUESTS TRACKED":"QUESTS TRACKED",
+   "QUESTS":"QUESTS",
+   "RAIDS":"RAIDS",
+   "Raids":"Raids",
+   "Raids Level":"Raid Level",
+   "Settings updated successfully":"Einstellungen erfolgreich aktualisiert",
+   "STATS":"STATS",
+   "Successfully Added Monster Alarm":"POKÉMON Alarm(e) erfolgreich gespeichert",
+   "Successfully Added Quest Alarm(s)":"QUEST Alarm(e) erfolgreich gespeichert",
+   "Successfully Added Raids Alarm(s)":"RAID Alarm(e) erfolgreich gespeichert",
+   "Successfully Deleted Egg Alarm":"Ei Alarm erfolgreich gelöscht",
+   "Successfully Deleted Eggs & Raids Alarm(s)":"Ei & Raid Alarm(e) erfolgreich gelöscht",
+   "Successfully Deleted Monster Alarm(s)":"POKÉMON Alarm erfolgreich gelöscht",
+   "Successfully Deleted Quest Alarm(s)":"QUEST Alarm(e) erfolgreich gelöscht",
+   "Successfully Deleted Raid Alarm(s)":"Raid Alarm(e) erfolgreich gelöscht",
+   "Successfully Updated Egg Alarm":"Ei Alarm erfolgreich aktuallisiert",
+   "Successfully Updated List of Areas":"Gebiete Liste erfolgreich aktuallisiert",
+   "Successfully Updated Monster Alarm":"POKÉMON Alarm erfolgreich aktuallisiert",
+   "Successfully Updated Quest Alarm":"Quest Alarm erfolgreich aktuallisiert",
+   "Successfully Updated Raid Alarm":"Raid Alarm erfolgreich aktuallisiert",
+   "Delete ALL tracked Mons?":"Alle getrackten POKÉMON löschen",
+   "Delete ALL Raid/Eggs?":"Alle Raids/Eier löschen",
+   "Delete ALL Quests?":"Alle Quests löschen",
+   "This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?":"Das wird alle deine Eier und Raid Alarme löschen, bist du dir sicher?",
+   "This will delete all your Pokémon Alarms and cannot be undone, are you sure ?":"Das wird alle deine Pokémon Alarme löschen, bist du dir sicher?",
+   "This will delete all your Quests Alarms and cannot be undone, are you sure ?":"Das wird alle deine Quest Alarme löschen, bist du dir sicher?",
+   "ULTRA":"HYPER",
+   "WEIGHT":"GEWICHT",
+   "Weight":"Gewicht",
+   "MIN STATS":"STATS MINIMUM",
+   "MAX STATS":"STATS MAXIMUM",
+   "PvP Great":"Superliga",
+   "PvP Ultra":"Hyperliga",
+   "MIN Rank":"Ranking Min",
+   "MAX Rank":"Ranking Max",
+   "AREAS":"GEBIETE",
+   "Your alarms are currently disabled !":"Deine Alarme sind aktuell deaktiviert",
+   "You Request couldn't not be handled":"Deine Eingabe konnte nicht verarbeitet werden",
+   "Your location is not set. Distance settings won't be taken into account.":"Dein Standort ist nicht gesetzt.</br> Distanzen werden nicht berücksichtigt.</br>",
+   "Distance":"Distanz",
+   "Form":"Form",
+   "Gender":"Geschlecht",
+   "GENDER":"GESCHLECHT",
+   "All":"Alle",
+   "Male":"Männlich",
+   "Female":"Weiblich",
+   "Clean":"Bereinigen",
+   "Yes":"Ja",
+   "No":"Nein",
+   "Apply to all Pokémons":"Auf alle Pokémon anwenden",
+   "NEW MONSTER ALARM":"NEUER POKÉMON ALARM",
+   "Type":"Tippe",
+   "to display all Pokémons":"um alle Pokémon anzuzeigen",
+   "Search":"Suche",
+   "Cancel":"Abbrechen",
+   "Submit":"Speichern",
+   "NEW RAID ALARM":"NEUER RAID ALARM",
+   "Select Egg Levels you want to add":"Wähle Ei Stufen aus, die du hinzufügen willst",
+   "Select Raid Levels you want to add":"Wähle Raid Stufen aus, die du hinzufügen willst",
+   "Select Pokémon Quests you want to add":"Wähle Quests aus, die du hinzufügen willst",
+   "Select the Raid Bosses you want to add":"Wähle Raid Bosse aus, die du hinzufügen willst",
+   "NEW QUEST ALARM":"NEUER QUEST ALARM",
+   "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Wähle Pokémon-Quests aus, die du hinzufügen willst",
+   "Pokemons Currently available on Map":"Pokémon die aktuell auf der Map verfügbar sind",
+   "Or use search below to add another pokemon":"oder verwende die Suche um ein anderes auszuwählen",
+   "Select Quests Items you want to add":"Wählen ein Quest Item aus, dass du hinzufügen willst.",
+   "Level":"Level",
+   "Update":"Aktualisieren",
+   "Close":"Schließen",
+   "Other":"Anderes",
+   "Buy or Renew a Subscription":"Abonnement kaufen oder verlängern",
+   "It looks like you do not have a valid subscription to this tool yet":"Du hast anscheinend noch kein gültiges Abonnement für dieses Tool",
+   "It looks like your subscription has expired on":"Dein Abonnement ist anscheinend abgelaufen",
+   "Your subscription is still valid until":"Dein Abonnement ist noch gültig bis",
+   "Back to":"Zurück zu",
+   "Renew":"Erneuern",
+   "Subscription valid until":"Abonnement gültig bis",
+   "Alerts":"Alarme",
+   "ALL Monters Cleaning":"Alle Pokémon bereinigen",
+   "ALL Raid/Egg Cleaning":"Alle Raids / Eier bereinigen",
+   "ALL Quests Cleaning":"Alle Quests bereinigen",
+   "Your Location is not set and cannot be set here!":"Dein Standort ist nicht festgelegt und kann hier nicht festgelegt werden!",
+   "Your Location is set to":"Dein Standort lautet",
+   "You have not set any area yet!":"Du hast noch kein Gebiet gewählt!",
+   "Save changes":"Änderungen speichern",
+   "YOU ARE NOT REGISTERED!":"Du bist nicht registriert!",
+   "Please Register in Discord using":"Bitte registriere dich in Discord mit",
+   "before using this tool":"bevor du dieses Seite nutzen kannst.",
+   "Do you really want to Leave?":"Möchtest du die Seite wirklich verlassen?",
+   "Click 'Logout' below if you are ready to end your current session":"Klicke auf 'Abmelden' um die Session zu beenden",
+   "Logout":"Abmelden",
+   "Settings":"Einstellungen",
+   "NOT REGISTERED":"NICHT REGISTRIERT",
+   "You have been successfully logged out":"Du wurdest erfolgreich abgemeldet",
+   "ALARM CONFIGURATION":"ALARM KONFIGURATION",
+   "LOGIN WITH DISCORD":"MIT DISCORD ANMELDEN",
+   "Location updated successfully":"Dein Standort wurde erfolgreich aktualisiert",
+   "LOCATION":"STANDORT",
+   "Update My Location":"Standort aktualisieren",
+   "Address not found. Try Again":"Adresse konnte nicht gefunden werden. Versuche es nochmal",
+   "Street":"Strasse",
+   "City":"Stadt",
+   "It can be set hereunder":"Es kann hierunter eingestellt werden"
 }
