--- a/locales/fr.json
+++ b/locales/fr.json
@@ -109,6 +109,7 @@
     "You have not set any area yet!": "Vous n'avez pas encore configuré de zones!",
     "Save changes":"Sauvegarder",
     "YOU ARE NOT REGISTERED!":"VOUS N'ÊTES PAS ENREGISTRÉ",
+    "NOT REGISTERED":"NON ENREGISTRÉ",
     "Please Register in Discord using":"Merci de vous enregistrer dans discord en utilisant",
     "before using this tool":"avant d'utiliser cet outil",
     "Do you really want to Leave?":"Voulez-vous vraiment quitter?",
