fix street name

--- a/locales/de.json
+++ b/locales/de.json
@@ -123,7 +123,7 @@
    "LOCATION":"STANDORT",
    "Update My Location":"Standort aktualisieren",
    "Address not found. Try Again":"Adresse konnte nicht gefunden werden. Versuche es nochmal",
-   "Street":"Strasse",
+   "Street Name":"Strasse",
    "City":"Stadt",
    "It can be set hereunder":"Es kann hierunter eingestellt werden"
 }
