--- a/locales/nl.json
+++ b/locales/nl.json
@@ -24,7 +24,7 @@
     "POKÉMONS TRACKED":"GEVOLGDE POKEMON",
     "EGGS & RAIDS TRACKED":"GEVOLGDE RAIDS & EIEREN",
     "QUESTS TRACKED":"GEVOLGENDE QUESTS",
-    "QUESTS":"QUSTS",
+    "QUESTS":"QUESTS",
     "RAIDS":"RAIDS",
     "Raids":"Raids",
     "Raids Level":"Raids Tier",
