change some german trasnlations

--- a/locales/de.json
+++ b/locales/de.json
@@ -1,19 +1,19 @@
 {
    "ADD":"HINZUFÜGEN",
    "ALL":"ALLE",
-   "ALL Monsters":"ALLE POKÉMON",
-   "ALL Quests":"ALLE Quests",
-   "ALL Raids/Eggs":"ALLE Raids/Eier",
+   "ALL Monsters":"allen Pokémon",
+   "ALL Quests":"allen Quests",
+   "ALL Raids/Eggs":"allen Raids/Eiern",
    "CANCEL":"ABBRECHEN",
    "Cleaning Activated":"Bereinigen aktiviert",
    "Cleaning activated on":"Bereinigen aktiviert bei",
-   "command":"Kommando",
+   "command":"Befehl",
    "CP":"WP",
    "DELETE":"LÖSCHEN",
    "DELETE ALL":"ALLE LÖSCHEN",
    "DISTANCE":"DISTANZ",
    "Eggs":"Eier",
-   "Eggs Level":"Eier Level",
+   "Eggs Level":"Ei Level",
    "Error":"Fehler",
    "GREAT":"SUPER",
    "IV":"IV",
@@ -21,47 +21,47 @@
    "meters":"Meter",
    "Please set it in discord using":"Bitte setze es in Discord mit dem entsprechenden",
    "POKÉMONS":"POKÉMON",
-   "POKÉMONS TRACKED":"POKÉMON TRACKED",
-   "EGGS & RAIDS TRACKED":"EIER & RAIDS TRACKED",
-   "QUESTS TRACKED":"QUESTS TRACKED",
+   "POKÉMONS TRACKED":"POKÉMON EINSTELLUNGEN",
+   "EGGS & RAIDS TRACKED":"RAID EINSTELLUNGEN",
+   "QUESTS TRACKED":"QUEST EINSTELLUNGEN",
    "QUESTS":"QUESTS",
    "RAIDS":"RAIDS",
    "Raids":"Raids",
    "Raids Level":"Raid Level",
    "Settings updated successfully":"Einstellungen erfolgreich aktualisiert",
    "STATS":"STATS",
-   "Successfully Added Monster Alarm":"POKÉMON Alarm(e) erfolgreich gespeichert",
-   "Successfully Added Quest Alarm(s)":"QUEST Alarm(e) erfolgreich gespeichert",
-   "Successfully Added Raids Alarm(s)":"RAID Alarm(e) erfolgreich gespeichert",
-   "Successfully Deleted Egg Alarm":"Ei Alarm erfolgreich gelöscht",
-   "Successfully Deleted Eggs & Raids Alarm(s)":"Ei & Raid Alarm(e) erfolgreich gelöscht",
-   "Successfully Deleted Monster Alarm(s)":"POKÉMON Alarm erfolgreich gelöscht",
-   "Successfully Deleted Quest Alarm(s)":"QUEST Alarm(e) erfolgreich gelöscht",
-   "Successfully Deleted Raid Alarm(s)":"Raid Alarm(e) erfolgreich gelöscht",
-   "Successfully Updated Egg Alarm":"Ei Alarm erfolgreich aktuallisiert",
-   "Successfully Updated List of Areas":"Gebiete Liste erfolgreich aktuallisiert",
-   "Successfully Updated Monster Alarm":"POKÉMON Alarm erfolgreich aktuallisiert",
-   "Successfully Updated Quest Alarm":"Quest Alarm erfolgreich aktuallisiert",
-   "Successfully Updated Raid Alarm":"Raid Alarm erfolgreich aktuallisiert",
-   "Delete ALL tracked Mons?":"Alle getrackten POKÉMON löschen",
-   "Delete ALL Raid/Eggs?":"Alle Raids/Eier löschen",
-   "Delete ALL Quests?":"Alle Quests löschen",
-   "This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?":"Das wird alle deine Eier und Raid Alarme löschen, bist du dir sicher?",
-   "This will delete all your Pokémon Alarms and cannot be undone, are you sure ?":"Das wird alle deine Pokémon Alarme löschen, bist du dir sicher?",
-   "This will delete all your Quests Alarms and cannot be undone, are you sure ?":"Das wird alle deine Quest Alarme löschen, bist du dir sicher?",
+   "Successfully Added Monster Alarm":"Pokémon Einstellung erfolgreich gespeichert",
+   "Successfully Added Quest Alarm(s)":"Quest Einstellung erfolgreich gespeichert",
+   "Successfully Added Raids Alarm(s)":"Raid und Ei Einstellungen erfolgreich gespeichert",
+   "Successfully Deleted Egg Alarm":"Ei Einstellung erfolgreich gelöscht",
+   "Successfully Deleted Eggs & Raids Alarm(s)":"Raid und Ei Einstellungen erfolgreich gelöscht",
+   "Successfully Deleted Monster Alarm(s)":"Pokémon Einstellung erfolgreich gelöscht",
+   "Successfully Deleted Quest Alarm(s)":"Quest Einstellung erfolgreich gelöscht",
+   "Successfully Deleted Raid Alarm(s)":"Raid Einstellung erfolgreich gelöscht",
+   "Successfully Updated Egg Alarm":"Ei Einstellung erfolgreich aktuallisiert",
+   "Successfully Updated List of Areas":"Gebiete erfolgreich aktuallisiert",
+   "Successfully Updated Monster Alarm":"Pokémon Einstellung erfolgreich aktuallisiert",
+   "Successfully Updated Quest Alarm":"Quest Einstellung erfolgreich aktuallisiert",
+   "Successfully Updated Raid Alarm":"Raid Einstellung erfolgreich aktuallisiert",
+   "Delete ALL tracked Mons?":"Alle Pokémon Einstellungen löschen",
+   "Delete ALL Raid/Eggs?":"Alle Raid Einstellungen löschen",
+   "Delete ALL Quests?":"Alle Quest Einstellungen löschen",
+   "This will delete all your Eggs & Raids Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle eingestellten Raids undwiderruflich löschen möchtest?",
+   "This will delete all your Pokémon Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle eingestellten Pokémon undwiderruflich löschen möchtest?",
+   "This will delete all your Quests Alarms and cannot be undone, are you sure ?":"Bist du dir sicher, dass du alle eingestellten Quests undwiderruflich löschen möchtest?",
    "ULTRA":"HYPER",
    "WEIGHT":"GEWICHT",
    "Weight":"Gewicht",
-   "MIN STATS":"STATS MINIMUM",
-   "MAX STATS":"STATS MAXIMUM",
+   "MIN STATS":"MINDESTENS",
+   "MAX STATS":"HÖCHSTENS",
    "PvP Great":"Superliga",
    "PvP Ultra":"Hyperliga",
    "MIN Rank":"Ranking Min",
    "MAX Rank":"Ranking Max",
    "AREAS":"GEBIETE",
-   "Your alarms are currently disabled !":"Deine Alarme sind aktuell deaktiviert",
-   "You Request couldn't not be handled":"Deine Eingabe konnte nicht verarbeitet werden",
-   "Your location is not set. Distance settings won't be taken into account.":"Dein Standort ist nicht gesetzt.</br> Distanzen werden nicht berücksichtigt.</br>",
+   "Your alarms are currently disabled !":"Deine Nachrichten sind aktuell deaktiviert",
+   "You Request couldn't not be handled":"Fehler bei deiner Eingabe: ",
+   "Your location is not set. Distance settings won't be taken into account.":"Dein Standort ist nicht gesetzt. </br>Distanzen werden nicht berücksichtigt!</br>",
    "Distance":"Distanz",
    "Form":"Form",
    "Gender":"Geschlecht",
@@ -73,46 +73,46 @@
    "Yes":"Ja",
    "No":"Nein",
    "Apply to all Pokémons":"Auf alle Pokémon anwenden",
-   "NEW MONSTER ALARM":"NEUER POKÉMON ALARM",
-   "Type":"Tippe",
+   "NEW MONSTER ALARM":"NEUE POKÉMON EINSTELLUNG",
+   "Type":"Schreibe",
    "to display all Pokémons":"um alle Pokémon anzuzeigen",
    "Search":"Suche",
    "Cancel":"Abbrechen",
    "Submit":"Speichern",
-   "NEW RAID ALARM":"NEUER RAID ALARM",
-   "Select Egg Levels you want to add":"Wähle Ei Stufen aus, die du hinzufügen willst",
-   "Select Raid Levels you want to add":"Wähle Raid Stufen aus, die du hinzufügen willst",
+   "NEW RAID ALARM":"NEUE RAID EINSTELLUNG",
+   "Select Egg Levels you want to add":"Wähle Ei Level aus, die du hinzufügen willst",
+   "Select Raid Levels you want to add":"Wähle Raid Level aus, die du hinzufügen willst",
    "Select Pokémon Quests you want to add":"Wähle Quests aus, die du hinzufügen willst",
    "Select the Raid Bosses you want to add":"Wähle Raid Bosse aus, die du hinzufügen willst",
-   "NEW QUEST ALARM":"NEUER QUEST ALARM",
-   "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Wähle Pokémon-Quests aus, die du hinzufügen willst",
-   "Pokemons Currently available on Map":"Pokémon die aktuell auf der Map verfügbar sind",
-   "Or use search below to add another pokemon":"oder verwende die Suche um ein anderes auszuwählen",
-   "Select Quests Items you want to add":"Wählen ein Quest Item aus, dass du hinzufügen willst.",
+   "NEW QUEST ALARM":"NEUE QUEST EINSTELLUNG",
+   "Select Pokémon Quests you want to add (Pokemons Currently available on Map)":"Wähle Pokémon, die du hinzufügen willst",
+   "Pokemons Currently available on Map":"Aus den heute gescannten Quests",
+   "Or use search below to add another pokemon":"Oder verwende die Suche um ein anderes auszuwählen",
+   "Select Quests Items you want to add":"Wählen Items, die du hinzufügen willst.",
    "Level":"Level",
    "Update":"Aktualisieren",
    "Close":"Schließen",
    "Other":"Anderes",
-   "Buy or Renew a Subscription":"Abonnement kaufen oder verlängern",
-   "It looks like you do not have a valid subscription to this tool yet":"Du hast anscheinend noch kein gültiges Abonnement für dieses Tool",
-   "It looks like your subscription has expired on":"Dein Abonnement ist anscheinend abgelaufen",
-   "Your subscription is still valid until":"Dein Abonnement ist noch gültig bis",
+   "Buy or Renew a Subscription":"Abo kaufen oder verlängern",
+   "It looks like you do not have a valid subscription to this tool yet":"Du hast anscheinend noch kein gültiges Abo für dieses Tool",
+   "It looks like your subscription has expired on":"Dein Abo ist anscheinend abgelaufen",
+   "Your subscription is still valid until":"Dein Abo ist noch gültig bis",
    "Back to":"Zurück zu",
    "Renew":"Erneuern",
-   "Subscription valid until":"Abonnement gültig bis",
-   "Alerts":"Alarme",
+   "Subscription valid until":"Abo gültig bis",
+   "Alerts":"Nachrichten",
    "ALL Monters Cleaning":"Alle Pokémon bereinigen",
-   "ALL Raid/Egg Cleaning":"Alle Raids / Eier bereinigen",
+   "ALL Raid/Egg Cleaning":"Alle Raids bereinigen",
    "ALL Quests Cleaning":"Alle Quests bereinigen",
    "Your Location is not set and cannot be set here!":"Dein Standort ist nicht festgelegt und kann hier nicht festgelegt werden!",
-   "Your Location is set to":"Dein Standort lautet",
+   "Your Location is set to":"Dein Standort:",
    "You have not set any area yet!":"Du hast noch kein Gebiet gewählt!",
    "Save changes":"Änderungen speichern",
    "YOU ARE NOT REGISTERED!":"Du bist nicht registriert!",
    "Please Register in Discord using":"Bitte registriere dich in Discord mit",
    "before using this tool":"bevor du dieses Seite nutzen kannst.",
    "Do you really want to Leave?":"Möchtest du die Seite wirklich verlassen?",
-   "Click 'Logout' below if you are ready to end your current session":"Klicke auf 'Abmelden' um die Session zu beenden",
+   "Click 'Logout' below if you are ready to end your current session":"Klicke auf 'Abmelden', um die Session zu beenden",
    "Logout":"Abmelden",
    "Settings":"Einstellungen",
    "NOT REGISTERED":"NICHT REGISTRIERT",
@@ -123,7 +123,7 @@
    "LOCATION":"STANDORT",
    "Update My Location":"Standort aktualisieren",
    "Address not found. Try Again":"Adresse konnte nicht gefunden werden. Versuche es nochmal",
-   "Street Name":"Strasse",
+   "Street Name":"Straße",
    "City":"Stadt",
    "It can be set hereunder":"Es kann hierunter eingestellt werden"
 }
