--- a/locales/de.json
+++ b/locales/de.json
@@ -38,11 +38,11 @@
    "Successfully Deleted Monster Alarm(s)":"Pokémon Einstellung erfolgreich gelöscht",
    "Successfully Deleted Quest Alarm(s)":"Quest Einstellung erfolgreich gelöscht",
    "Successfully Deleted Raid Alarm(s)":"Raid Einstellung erfolgreich gelöscht",
-   "Successfully Updated Egg Alarm":"Ei Einstellung erfolgreich aktuallisiert",
-   "Successfully Updated List of Areas":"Gebiete erfolgreich aktuallisiert",
-   "Successfully Updated Monster Alarm":"Pokémon Einstellung erfolgreich aktuallisiert",
-   "Successfully Updated Quest Alarm":"Quest Einstellung erfolgreich aktuallisiert",
-   "Successfully Updated Raid Alarm":"Raid Einstellung erfolgreich aktuallisiert",
+   "Successfully Updated Egg Alarm":"Ei Einstellung erfolgreich aktualisiert",
+   "Successfully Updated List of Areas":"Gebiete erfolgreich aktualisiert",
+   "Successfully Updated Monster Alarm":"Pokémon Einstellung erfolgreich aktualisiert",
+   "Successfully Updated Quest Alarm":"Quest Einstellung erfolgreich aktualisiert",
+   "Successfully Updated Raid Alarm":"Raid Einstellung erfolgreich aktualisiert",
    "Delete ALL tracked Mons?":"Alle Pokémon Einstellungen löschen",
    "Delete ALL Raid/Eggs?":"Alle Raid Einstellungen löschen",
    "Delete ALL Quests?":"Alle Quest Einstellungen löschen",
