--- a/locales/de.json
+++ b/locales/de.json
@@ -126,4 +126,7 @@
    "Street Name":"Strasse",
    "City":"Stadt",
    "It can be set hereunder":"Es kann hierunter eingestellt werden"
+   "Delete tracking for":"Tracking löschen für",
+   "This will delete tracking for":"Das löscht das Tracking für",
+   "Are you sure?":"Bist du sicher?"
 }
