New Button to Set Location to current Position

--- a/locales/fr.json
+++ b/locales/fr.json
@@ -59,7 +59,7 @@
     "MIN Rank":"Ranking Min",
     "MAX Rank":"Ranking Max",
     "AREAS":"ZONES",
-    "Your alarms are currently disabled !":"Vos alarmes sont désactivées",
+    "Your alarms are currently disabled!":"Vos alarmes sont désactivées",
     "You Request couldn't not be handled":"Votre demande n'a pas pû être traitée",
     "Your location is not set. Distance settings won't be taken into account.":"Votre localisation n'est pas configurée. Les paramètres de distance ne seront pas pris en compte",
     "Distance":"Distance",
@@ -130,11 +130,17 @@
     "Delete tracking for Eggs Level":"Supprimer le Suivi des Oeufs Niveau",
     "This will delete tracking for Eggs Level":"Cette action supprimrea le suivi des Oeufs Niveau",
     "Delete tracking for Raids Level":"Supprimer le Suivi des Raids Niveau",
-    "This will delete tracking for Raids Level":"Cette action supprimrea le suivi des Raids Niveau",
+    "This will delete tracking for Raids Level":"Cette action supprimera le suivi des Raids Niveau",
     "Delete Raid tracking for":"Supprimer le Suivi des Raids",
-    "This will delete Raid tracking for":"Cette action supprimrea le suivi des Raids",
+    "This will delete Raid tracking for":"Cette action supprimera le suivi des Raids",
     "Delete Quests tracking for":"Supprimer le Suivi des Quêtes",
-    "This will delete Quests tracking for":"Cette action supprimrea le suivi des Quêtes",
+    "This will delete Quests tracking for":"Cette action supprimera le suivi des Quêtes",
     "Delete Quests Item tracking":"Supprimer le Suivi de l'object de Quêtes",
-    "This will delete Quests tracking for this item":"Cette action supprimrea le suivi de l'object de Quêtes"
+    "This will delete Quests tracking for this item":"Cette action supprimera le suivi de l'object de Quêtes",
+    "Could not set Location":"Impossible d'obtenir la position",
+    "User denied the request for Geolocation":"L'utilisateur a bloqué l'accès à la localisation",
+    "Location information is unavailable":"L'information de localisation n'est pas disponible",
+    "The request to get user location timed out":"La demande de localisation a expiré",
+    "An unknown error occurred":"Une erreur inconnue s'est produite",
+    "Geolocation is not supported by this browser":"La géolocalisation n'est pas supportée par ce navigateur"
 }
