--- a/locales/pl.json
+++ b/locales/pl.json
@@ -59,7 +59,7 @@
     "MIN Rank":"MIN Ranking",
     "MAX Rank":"MAX Ranking",
     "AREAS":"OBSZARY",
-    "Your alarms are currently disabled !":"Twoje powiadomienia są obecnie wyłączone",
+    "Your alarms are currently disabled!":"Twoje powiadomienia są obecnie wyłączone!",
     "You Request couldn't not be handled":"Nie udało się wykonać tej czynności",
     "Your location is not set. Distance settings won't be taken into account.":"Lokalizacja nie została ustawiona. Filtr dotyczący doległości nie będzie funkcjonować.",
     "Distance":"Odległość",
