--- a/locales/fr.json
+++ b/locales/fr.json
@@ -153,5 +153,6 @@
     "Successfully Update Distance on ALL Pokémons":"Distance Mise à Jour avec Succès pour TOUS les Pokémons",
     "Successfully Update Distance on ALL Raids & Eggs":"Distance Mise à Jour avec Succès pour TOUS les Raids et Oeufs",
     "Successfully Update Distance on ALL Quests":"Distance Mise à Jour avec Succès pour TOUTES les quêtes",
-    "UPDATE":"MAJ"
+    "UPDATE":"MAJ",
+    "UPDATE DISTANCE":"MODIFIER LA DISTANCE"
 }
