--- a/locales/nl.json
+++ b/locales/nl.json
@@ -122,6 +122,37 @@
     "It can be set hereunder":"Je kan dit hieronder instellen",
     "Update My Location":"Update mijn locatie",
     "Street Name":"Straatnaam",
-    "City":"Gemeente",
-    "LOCATION":"LOCATIE"
+    "City":"Plaats",
+    "LOCATION":"LOCATIE",
+    "Delete tracking for":"Verwijder wat je volgt voor",
+    "This will delete tracking for":"Hiermee verwijder je wat je volgt voor",
+    "Are you sure?":"Weet je het zeker?",
+    "Delete tracking for Eggs Level":"Verwijder gevolgde eieren met level",
+    "This will delete tracking for Eggs Level":"Hiermee verwijder je gevolgde eieren van level",
+    "Delete tracking for Raids Level":"Verwijder gevolgde raid met level",
+    "This will delete tracking for Raids Level":"Hiermee verwijder je gevolgde raids van level",
+    "Delete Raid tracking for":"Verwijder gevolgde raids voor",
+    "This will delete Raid tracking for":"Hiermee verwijder je gevolgde raids voor",
+    "Delete Quests tracking for":"Verwijder gevolgde quests voor",
+    "This will delete Quests tracking for":"Hiermee verwijder je de gevolgde quests voor",
+    "Delete Quests Item tracking":"Verwijder quests voor item",
+    "This will delete Quests tracking for this item":"Hiermee verwijder je gevolgde quests voor item",
+    "Could not set Location":"Kon de locatie niet instellen",
+    "User denied the request for Geolocation":"Gebruiker heeft verzoek voor locatie delen afgewezen",
+    "Location information is unavailable":"Locatie informatie is niet beschikbaar",
+    "The request to get user location timed out":"Het verzoek voor gebruikers locatie duurde te lang",
+    "An unknown error occurred":"Een onbekende fout is opgetreden",
+    "Geolocation is not supported by this browser":"Geolocatie word niet ondersteund in deze browser",
+    "Update Distance for all tracked Pokémons?":"Bijwerken afstand instelling voor alle Pokémons?",
+    "This will update Distance settings for ALL tracked Pokémons":"Hiermee pas je de afstand aan van alle Pokémons die je volgt",
+    "Please Set New Distance":"Stel je nieuwe afstand in",
+    "Update Distance for all tracked Raids & Eggs?":"Bijwerken afstand instelling voor alle raids en eieren?",
+    "This will update Distance settings for ALL tracked Raids & Eggs":"Bijwerken afstand instelling voor alle raids en eieren",
+    "Update Distance for all tracked Quests?":"Bijwerken afstand instelling voor alle quests?",
+    "This will update Distance settings for ALL tracked Quests":"Bijwerken afstand instelling voor alle quests",
+    "Successfully Update Distance on ALL Pokémons":"Afstand alle Pokémon succesvol bijgewerkt",
+    "Successfully Update Distance on ALL Raids & Eggs":"Afstand alle raids en eieren succesvol bijgewerkt",
+    "Successfully Update Distance on ALL Quests":"Afstand alle quests succesvol bijgewerkt",
+    "UPDATE":"BIJWERKEN",
+    "UPDATE DISTANCE":"BIJWERKEN AFSTAND"
 }
