--- a/locales/de.json
+++ b/locales/de.json
@@ -128,5 +128,33 @@
    "It can be set hereunder":"Es kann hierunter eingestellt werden",
    "Delete tracking for":"Tracking löschen für",
    "This will delete tracking for":"Das löscht das Tracking für",
-   "Are you sure?":"Bist du sicher?"
+   "Are you sure?":"Bist du sicher?",
+   "Delete tracking for Eggs Level":"Lösche Tracking für Ei Level",
+   "This will delete tracking for Eggs Level":"Dadurch wird das Tracking gelöscht für Eier Level",
+   "Delete tracking for Raids Level":"Lösche Tracking für Raid Level",
+   "This will delete tracking for Raids Level":"Dadurch wird das Tracking gelöscht für Raid Level",
+   "Delete Raid tracking for":"Lösche Raid Tracking für",
+   "This will delete Raid tracking for":"Dadruch wird das Tracking gelöscht für folgenden Raid",
+   "Delete Quests tracking for":"Lösche Quest Tracking für",
+   "This will delete Quests tracking for":"Dadurch wird das Quest Tracking gelöscht für",
+   "Delete Quests Item tracking":"Lösche Quest Item tracking",
+   "This will delete Quests tracking for this item":"Dadurch wird das Quest Tracking gelöscht für folgendes Item",
+   "Could not set Location":"Dein Standort konnte nicht gesetzt werden.",
+   "User denied the request for Geolocation":"Anwender hat den Zugriff auf den Standort abgelehnt",
+   "Location information is unavailable":"Standortinformationen sind nicht verfügbar",
+   "The request to get user location timed out":"Die Standortanfrage ist abgelaufen",
+   "An unknown error occurred":"Ein unbekannter Fehler ist aufgetreten",
+   "Geolocation is not supported by this browser":"Standortbestimmung wird vom Browser nicht unterstützt",
+   "Update Distance for all tracked Pokémons?":"Möchtest du die Distanz für alle getrackten Pokémon aktualisieren?",
+   "This will update Distance settings for ALL tracked Pokémons":"Dadurch werden alle Distanzeinstellungen für ALLE Pokémon aktualisiert.",
+   "Please Set New Distance":"Bitte setzten deinen neuen Standort",
+   "Update Distance for all tracked Raids & Eggs?":"Möchtest du die Distanz für alle getrackten Raids & Eier aktualisieren?",
+   "This will update Distance settings for ALL tracked Raids & Eggs":"Dadurch wird die Distanz für ALLE getrackten Raids & Eier aktualisiert",
+   "Update Distance for all tracked Quests?":"Möchstest du die Distanz für alle getrackten Quests aktualisieren?",
+   "This will update Distance settings for ALL tracked Quests":"Dadurch wird die Distanz für ALLE getrackten Quests aktualisiert",
+   "Successfully Update Distance on ALL Pokémons":"Distanzeinstellungen wurden erfolgreich für alle Pokémon gespeichert",
+   "Successfully Update Distance on ALL Raids & Eggs":"Distanzeinstellungen wurden erfolgreich für alle Raids & Eier gespeichert",
+   "Successfully Update Distance on ALL Quests":"Distanzeinstellungen wurden erfolgreich für alle Quests gespeichert",
+   "UPDATE":"AKTUALISIEREN",
+   "UPDATE DISTANCE":"DISTANZ AKTUALISIEREN"
 }
